--- a/hw/app/views/dice/roll.html.erb
+++ b/hw/app/views/dice/roll.html.erb
@@ -1,9 +1,12 @@
-You rolled <%= @first%> and <%= @second%>.
+<h1><%= "Dice Game" %></h1>
 <br><br>
 
-<%= @result%>
+You rolled <%= @first %> and <%= @second %>.
 <br><br>
 
-<a href=<%= @next_page%>><%= @again%></a>
+<%= @result %>
+<br><br>
+
+<a href=<%= @next_page %>><%= @again %></a>
 
 
